# NyxEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  PROJECT_STATUS.md  README.md  WINDOWS_SETUP.md  gladconv.py  gladconv.txt  hairconv.py  launch.bat
projects/New project/procgen/: planet.py
projects/Sandbox/scenes/: scene.scene
resources/: nyx.rc
shaders/: bloom_downsample.frag  composite.frag  depth_only.frag  mesh.frag  mesh.vert  mesh_skinned.vert  point_shadow.frag  preview.frag  preview.vert  shadow.vert  sky.vert  triangle.frag  ui.frag  ui.vert
src/: Engine.cpp  Engine.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Window.cpp  Window.h  main.cpp
src/core/: LogStore.cpp  LogStore.h  Time.cpp  Time.h
src/ecs/: ComponentPool.h  Entity.h  IComponentPoolBase.h  Registry.cpp  Registry.h
src/ecs/components/: EnvironmentComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  NameComponent.h  OcclusionOverlay.h  SkinComponent.h  TransformComponent.h
src/ecs/systems/: TransformSystem.cpp  TransformSystem.h
src/game/: GameScript.h  GameScriptDefault.cpp
src/planet/: PlanetSystem.cpp  PlanetSystem.h
src/procgen/: Planet.cpp  Planet.h
src/renderer/: AssimpLoader.cpp  AssimpLoader.h  BloomPass.cpp  BloomPass.h  Buffer.cpp  Buffer.h  DepthBuffer.cpp  DepthBuffer.h  Descriptors.cpp  Descriptors.h  GltfLoader.cpp  GltfLoader.h  HdrTarget.cpp  HdrTarget.h  ImagePipeline.cpp  ImagePipeline.h  MaterialPreviewPipeline.cpp  MaterialPreviewPipeline.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  Pipeline.cpp  Pipeline.h  PointShadowMap.cpp  PointShadowMap.h  Renderer.cpp  Renderer.h  ResourceCache.cpp  ResourceCache.h  ShadowMap.cpp  ShadowMap.h  StbImageUsage.cpp  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  UniformTypes.h  Vertex.h  VmaUsage.cpp  (+2 more)
src/scene/: Camera.cpp  Camera.h
src/ui/: CodeEditor.cpp  CodeEditor.h  Console.cpp  Console.h  ContentBrowser.cpp  ContentBrowser.h  Gizmo.cpp  Gizmo.h  Highlighter.cpp  Highlighter.h  Inspector.cpp  Inspector.h  PixelFont.cpp  PixelFont.h  SceneHierarchy.cpp  SceneHierarchy.h  Splash.cpp  Splash.h  TitleBar.cpp  TitleBar.h  UIPipeline.cpp  UIPipeline.h  UIVertex.h
tools/: dump_alpha.cpp  introspect_fbx.cpp
